syntax = "proto2";//指定版本信息，不指定会报错
package buffer; //package声明符

message CGRedHatCancelProto {
  optional int32 msgType=1 [default = 5507];//协议类型
  optional int32 status = 2;//状态码
  optional int32 redId = 3;//要消除的红点Id(对应redpoint.xls的codeId)
}